Now with 100% more Kanye. Fix some Jade formatting and tweak CSS for visibility (for now).

--- a/public/stylesheets/toolbarswag.css
+++ b/public/stylesheets/toolbarswag.css
@@ -1,7 +1,6 @@
 body {
     background-color:#fff;
     height:2000px;
-    color:#ccc;
     font:15px "Lucida Grande", "Lucida Sans", "Trebuchet MS", verdana, sans-serif;
 }
 #floatMenu {
@@ -19,7 +18,6 @@ body {
     background-color:#FF9900;
     /*border-left:6px solid #999;*/
     text-decoration:none;
-    color:#ccc;
     padding:5px 5px 5px 25px;
 }
 #floatMenu ul.menu1 li a:hover {
